--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"type": "git",
 		"url": "https://github.com/skybrud/sky-window.git"
 	},
-	"dependencies": {
+	"peerDependencies": {
 		"rxjs": "5.0.2"
 	},
 	"devDependencies": {
