--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "babel-preset-stage-2": "^6.11.0",
     "babel-runtime": "^6.9.2",
     "css-loader": "^0.28.10",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^2.1.1",
     "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.6",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "vue": "^2.5.11",
     "vue-html-loader": "^1.2.3",
